--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
   "bugs": {
     "url": "https://github.com/j-zeng/angular2-http-file-upload/issues"
   },
-  "homepage": "https://github.com/j-zeng/angular2-http-file-upload"
+  "homepage": "https://github.com/j-zeng/angular2-http-file-upload",
+  "dependencies": {
+    "@angular/cli": "^1.3.0",
+    "@angular/common": "^4.3.4",
+    "@angular/compiler": "^4.3.4",
+    "@angular/core": "^4.3.4"
+  }
 }
