--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/j-zeng/angular2-http-file-upload.git"
+    "url": "https://github.com/deanproxy/angular2-http-file-upload.git"
   },
   "keywords": [
     "Angular",
@@ -18,12 +18,12 @@
     "File",
     "Upload"
   ],
-  "author": "jzeng",
+  "author": "deanproxy",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/j-zeng/angular2-http-file-upload/issues"
+    "url": "https://github.com/deanproxy/angular2-http-file-upload/issues"
   },
-  "homepage": "https://github.com/j-zeng/angular2-http-file-upload",
+  "homepage": "https://github.com/deanproxy/angular2-http-file-upload",
   "dependencies": {
     "@angular/cli": "^1.3.0",
     "@angular/common": "^4.3.4",
