--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "url": "https://github.com/deanproxy/angular2-http-file-upload/issues"
   },
   "homepage": "https://github.com/deanproxy/angular2-http-file-upload",
-  "dependencies": {
+  "devDependencies": {
     "@angular/cli": "^1.3.0",
     "@angular/common": "^4.3.4",
     "@angular/compiler": "^4.3.4",
